# Loopr_Takehome

./: .gitignore  Dockerfile  README.md  compose.yaml  machine_learning.ipynb  pyproject.toml  request_server.py  train_contrastive.ipynb  train_nn.ipynb  train_unet.ipynb
config/: tsdproxy.yaml
src/loopr/: __init__.py  serve_model.py
src/loopr/config/: training_nn.py  training_unet.py
src/loopr/data/: classification.py  contrastive.py  semantic_segmentation.py  utils.py
src/loopr/eda/: class_visualization.py
src/loopr/losses/: contrastive.py  dice.py  weighted_focal.py
src/loopr/models/: mlp.py  total.py  unet.py
src/loopr/training/: train_contrastive.py  train_neural_net.py  train_unet.py
